fixed font for home

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div>
-  <h6>This website was birthed out of frustration that there didn't
-    exist a website about me. So I decided to create it myself
-  </h6>
+  <p>This website was birthed out of frustration that there didn't
+    exist a website about me. So I decided to create it myself.
+  </p>
 </div>
